--- a/test/index.html
+++ b/test/index.html
@@ -56,55 +56,53 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         //'su-view-reports.html?dom=shady',
         //'su-view-reports.html?dom=shadow',
-        'su-medication.html?dom=shady',
-        'su-medication.html?dom=shadow',
-
-        //'su-care-review-edit-view.html?dom=shady',
-        //'su-care-review-edit-view.html?dom=shadow',
-        //'su-care-review-multi-view.html?dom=shady',
-        //'su-care-review-multi-view.html?dom=shadow',
+        //'su-medication.html?dom=shady',
+        //'su-medication.html?dom=shadow',
         //'su-care-review.html?dom=shady',
         //'su-care-review.html?dom=shadow',
+        //'su-risk.html?dom=shady',
+        //'su-risk.html?dom=shadow',
+        //'su-goals.html?dom=shady',
+        //'su-goals.html?dom=shadow',
 
+        //admin page tests
+        //'ad-dash.html?dom=shady',
+        //'ad-dash.html?dom=shadow',
+        //'ad-support.html?dom=shady',
+        //'ad-support.html?dom=shadow',
+        //'ad-profile.html?dom=shady',
+        //'ad-profile.html?dom=shadow',
+        //'ad-settings.html?dom=shady',
+        //'ad-settings.html?dom=shadow',
+        'ad-reports.html?dom=shady',
+        'ad-reports.html?dom=shadow',
         /*
+
         //incomplete tests
 
-        //care-plan pages
+        //main functions are handled on main pages for each of these pages... other testing on these pages might be worthwhile though...
         'su-goals-edit-view.html?dom=shady',
         'su-goals-edit-view.html?dom=shadow',
         'su-goals-multi-view.html?dom=shady',
         'su-goals-multi-view.html?dom=shadow',
-        'su-goals.html?dom=shady',
-        'su-goals.html?dom=shadow',
         'su-risk-edit-view.html?dom=shady',
         'su-risk-edit-view.html?dom=shadow',
         'su-risk-multi-view.html?dom=shady',
         'su-risk-multi-view.html?dom=shadow',
-        'su-risk.html?dom=shady',
-        'su-risk.html?dom=shadow',
 
         //app shell tests
         'my-app.html?dom=shady',
         'my-app.html?dom=shadow',
 
         //default page tests
-
+        //testing difficult due to needing to work with new users each time... perhaps do later....
         'def-verify.html?dom=shady',
         'def-verify.html?dom=shadow',
 
         //admin page tests
-        'ad-dash.html?dom=shady',
-        'ad-dash.html?dom=shadow',
+
         'ad-payment.html?dom=shady',
         'ad-payment.html?dom=shadow',
-        'ad-profile.html?dom=shady',
-        'ad-profile.html?dom=shadow',
-        'ad-reports.html?dom=shady',
-        'ad-reports.html?dom=shadow',
-        'ad-settings.html?dom=shady',
-        'ad-settings.html?dom=shadow',
-        'ad-support.html?dom=shady',
-        'ad-support.html?dom=shadow',
         'ad-users.html?dom=shady',
         'ad-users.html?dom=shadow',
         'annual-manager-report.html?dom=shady',
