--- a/src/pages/care-plan/su-goals.html
+++ b/src/pages/care-plan/su-goals.html
@@ -123,55 +123,55 @@
       <!--repeat each goal that currently is set-->
       <div class="pageInnerCont">
 
-          <!--absolute positioned button to finsh adding a new goal and close the add view-->
-          <paper-fab
-            id="editFab"
-            icon="icons:check"
-            on-tap="finishGoal">
-          </paper-fab>
+        <!--absolute positioned button to finsh adding a new goal and close the add view-->
+        <paper-fab
+          id="editFab"
+          icon="icons:check"
+          on-tap="finishGoal">
+        </paper-fab>
 
-          <!--absolute positioned button to add a new goal-->
-          <paper-fab
-            id="regFab"
-            icon="icons:add"
-            on-tap="addGoal">
-          </paper-fab>
+        <!--absolute positioned button to add a new goal-->
+        <paper-fab
+          id="regFab"
+          icon="icons:add"
+          on-tap="addGoal">
+        </paper-fab>
 
-          <!--default placeholder if user has not put any goals in yet...-->
-          <!--
-          <div hidden="{{queryCount}}">
+        <!--default placeholder if user has not put any goals in yet...-->
+        <!--
+        <div hidden="{{queryCount}}">
 
 
-          </div>
-          -->
-          <neon-animated-pages
-            attr-for-selected="name"
-            selected="[[pageState]]"
-            entry-animation="scale-up-animation"
-            exit-animation="scale-down-animation">
+        </div>
+        -->
+        <neon-animated-pages
+          attr-for-selected="name"
+          selected="[[pageState]]"
+          entry-animation="scale-up-animation"
+          exit-animation="scale-down-animation">
 
-            <su-goals-multi-view
-              name="multi-view"
-              goals-data="{{goalsData}}"
-              goal-id="{{goalId}}">
-            </su-goals-multi-view>
+          <su-goals-multi-view
+            name="multi-view"
+            goals-data="{{goalsData}}"
+            goal-id="{{goalId}}">
+          </su-goals-multi-view>
 
-            <su-goals-edit-view
-              su-basic-info="[[suBasicInfo]]"
-              name="edit-view"
-              goal-data="{{goalData}}"
-              goal-id="[[goalId]]"
-              home="[[home]]"
-              page="[[page]]"
-              patient="[[patient]]"
-              user-list="[[userList]]"
-              step-id="{{stepId}}"
-              step-modal-open="{{stepModalOpen}}"
-              steps-data="{{stepsData}}"
-              step-data="{{stepData}}">
-            </su-goals-edit-view>
+          <su-goals-edit-view
+            su-basic-info="[[suBasicInfo]]"
+            name="edit-view"
+            goal-data="{{goalData}}"
+            goal-id="[[goalId]]"
+            home="[[home]]"
+            page="[[page]]"
+            patient="[[patient]]"
+            user-list="[[userList]]"
+            step-id="{{stepId}}"
+            step-modal-open="{{stepModalOpen}}"
+            steps-data="{{stepsData}}"
+            step-data="{{stepData}}">
+          </su-goals-edit-view>
 
-          </neon-animated-pages>
+        </neon-animated-pages>
 
 
       </div>
@@ -185,14 +185,17 @@
     Polymer({
 
       is: 'su-goals',
-      goEdit:function(){
-        this.pageState="edit-view";
+
+      goEdit: function() {
+        this.pageState = "edit-view";
       },
-      goMulti:function(){
-        this.pageState="multi-view";
+
+      goMulti: function() {
+        this.pageState = "multi-view";
       },
-      ready:function(){
-        this.fire("pageLoaded", {page:this.page});
+
+      ready: function() {
+        this.fire("pageLoaded", {page: this.page});
         //print listener
         this.addEventListener("print", this.print);
 
@@ -207,42 +210,56 @@
         this.addEventListener("deleteStep", this.deleteStep);
         this.addEventListener("checkboxChanged", this.checkboxChanged);
 
-        this.$.usersDB.query.on("value", function(snapshot){
+        this.$.usersDB.query.on("value", function(snapshot) {
           this.updateUsers(snapshot);
         }.bind(this));
       },
-      properties:{
-        page:{
-          type:String
+
+      properties: {
+
+        dimensions: {
+          type: Object
         },
-        patient:{
-          type:String
+
+        page: {
+          type: String
         },
-        home:{
-          type:String
+
+        patient: {
+          type :String
         },
-        goalSelected:{
-          type:Boolean,
-          value:false
+
+        home: {
+          type: String
         },
-        pageState:{
-          type:String,
-          value:"multi-view"
+
+        goalSelected: {
+          type: Boolean,
+          value: false
         },
-        goalId:{
-          type:String,
-          observer:"initNotify"
+
+        pageState: {
+          type: String,
+          value: "multi-view"
         },
-        stepId:{
-          type:String
+
+        goalId: {
+          type: String,
+          observer: "initNotify"
         },
-        stepModalOpen:{
-          type:String,
-          value:"close"
+
+        stepId: {
+          type: String
         },
-        goalTypes:{
-          type:Array,
-          value:[
+
+        stepModalOpen: {
+          type: String,
+          value: "close"
+        },
+
+        goalTypes: {
+          type: Array,
+          value: [
             "Accommodation",
             "Finance And Budget",
             "Social Skills",
@@ -251,145 +268,170 @@
             "Other"
           ]
         },
-        userList:{
-          type:Array,
+
+        userList: {
+          type: Array,
         },
-        newGoal:{
-          type:Object,
-          value:null,
-          observer:"newGoalChanged"
+
+        newGoal: {
+          type: Object,
+          value: null,
+          observer: "newGoalChanged"
         }
+
       },
-      observers:[
+
+      observers: [
         "requirementsMet(goalsData)"
       ],
-      behaviors:[
+
+      behaviors: [
         Polymer.fabAnimationBehavior,
         Polymer.carePlanAnimation,
         Polymer.suPrintBehavior,
         Polymer.suResizeBehavior
       ],
-      initNotify:function(){
+
+      initNotify: function() {
         this.$.dateNotify.initialize();
       },
+
       //activated from child events
       //multi-view event functions
-      editGoal:function(e){
-         this.$.goalDB.path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"+this.goalId;
-         this.$.stepsDB.path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"+this.goalId+"/steps";
+      editGoal:function(e) {
+         this.$.goalDB.path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/" + this.goalId;
+         this.$.stepsDB.path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/" + this.goalId + "/steps";
          this.animateEditViewFab();
-         this.pageState="edit-view"
+         this.pageState = "edit-view"
       },
-      deleteGoal:function(e){
-        var path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"+this.goalId;
-        this.$.goalDB.setStoredValue(path, null);
+
+      deleteGoal: function(e) {
+        var path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/" + this.goalId;
+        this.$.goalDB.setStoredValue(path, null)
+          .then(function() {
+            this.fire("goalDeleted")
+          }.bind(this))
+          .catch(function(err) {
+            console.log(err);
+          });
         this.$.dateNotify.deNotify(this.home, this.goalId);
-        this.stepModalOpen="close";
+        this.stepModalOpen = "close";
       },
+
       //edit-view functions
-      addStep:function(){
-        this.$.stepDB.path=null;
-        this.$.stepDB.data={};
-        var path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"+this.goalId+"/steps";
+      addStep: function() {
+        this.$.stepDB.path = null;
+        this.$.stepDB.data = {};
+        var path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/" + this.goalId + "/steps";
         this.$.stepDB.save(path, null)
-          .then(function(){
-            this.stepId=this.$.stepDB.path.slice(path.length+2);
-            this.stepModalOpen="open";
+          .then(function() {
+            this.stepId = this.$.stepDB.path.slice(path.length + 2);
+            this.stepModalOpen = "open";
             //reset the db path and save the path for later
-            this.$.stepDB.path=null;
+            this.$.stepDB.path = null;
           }.bind(this));
       },
-      editStep:function(){
-        this.$.stepDB.path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"+this.goalId+"/steps/"+this.stepId;
-        this.stepModalOpen="open";
+
+      editStep: function() {
+        this.$.stepDB.path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/" + this.goalId + "/steps/" + this.stepId;
+        this.stepModalOpen = "open";
       },
-      saveStep:function(){
-        var path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"+this.goalId+"/steps";
+      saveStep:function() {
+        var path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/" + this.goalId + "/steps";
         this.$.stepDB.save(path, this.stepId)
-          .then(function(){
-            this.fire("openToast",{toastText:"new step saved."});
-            this.stepModalOpen="close";
-            this.$.stepDB.path=null;
-            this.$.stepDB.data={};
+          .then(function() {
+            this.fire("openToast", {toastText: "new step saved."});
+            this.stepModalOpen = "close";
+            this.$.stepDB.path = null;
+            this.$.stepDB.data = {};
           }.bind(this))
-          .catch(function(error){
-            this.fire("openToast",{toastText:"there was an error saving your new step: "+error});
-            this.stepModalOpen="close";
-            this.$.stepDB.path=null;
-            this.$.stepDB.data={};
+          .catch(function(error) {
+            this.fire("openToast",{toastText: "there was an error saving your new step: " + error});
+            this.stepModalOpen = "close";
+            this.$.stepDB.path = null;
+            this.$.stepDB.data = {};
           });
       },
+
       //reg functions
-      updateUsers:function(snapshot){
-        var tempList=[];
-        if(snapshot.val()){
-          var data=snapshot.val();
-          for(x in data){
-            if(data[x].displayName){
+      updateUsers: function(snapshot) {
+        var tempList = [];
+        if(snapshot.val()) {
+          var data = snapshot.val();
+          for(x in data) {
+            if(data[x].displayName) {
               tempList.push(data[x].displayName);
             } else {
               tempList.push(data[x].email);
             };
           };
         };
-        this.userList=tempList;
+        this.userList = tempList;
       },
-      addGoal:function(){
+
+      addGoal: function() {
         this.$.addGoalModal.open();
       },
-      newGoalChanged:function(data){
-        if(data!=null){
-          var path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"
-          this.$.goalDB.data=data;
+
+      newGoalChanged: function(data) {
+        if(data != null) {
+          var path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/"
+          this.$.goalDB.data = data;
           this.$.goalDB.save(path, null)
-            .then(function(){
-              this.fire("openToast",{toastText:"new goal saved."});
-              this.$.goalDB.path=null;
-              this.$.goalDB.data={};
+            .then(function() {
+              var goalId = this.$.goalDB.path.split("/").pop();
+              this.fire("openToast",{toastText: "new goal saved."});
+              this.fire("newGoalSaved", {goalId: goalId});
+              this.$.goalDB.path = null;
+              this.$.goalDB.data = {};
             }.bind(this))
-            .catch(function(error){
-              this.fire("openToast",{toastText:"there was an error saving your new goal: "+error});
-              this.$.goalDB.path=null;
-              this.$.goalDB.data={};
+            .catch(function(error) {
+              this.fire("openToast",{toastText: "there was an error saving your new goal: " + error});
+              this.$.goalDB.path = null;
+              this.$.goalDB.data = {};
             });
-        }
+        };
       },
-      finishGoal:function(e){
+
+      finishGoal: function(e) {
         this.animateMultiViewFab();
-        this.pageState="multi-view"
+        this.pageState = "multi-view"
       },
-      checkboxChanged:function(e){
-        var stepID=e.detail.stepID;
-        var checkBool=e.detail.checkBool;
-        var path="homes/"+this.home+"/patients/"+this.patient+"/personalGoals/"+this.goalId+"/steps/"+stepID+"/completed";
+
+      checkboxChanged: function(e) {
+        var stepID = e.detail.stepID;
+        var checkBool = e.detail.checkBool;
+        var path = "homes/" + this.home + "/patients/" + this.patient + "/personalGoals/" + this.goalId + "/steps/" + stepID + "/completed";
         this.$.stepDB.setStoredValue(path, checkBool);
       },
-      requirementsMet:function(data){
+
+      requirementsMet: function(data) {
         //change case
-        this.$.goalsDB.query.on("child_changed",function(){
-          var goalData=this.$.goalDB.data;
-          if(!goalData.category){
-            this.fire("openToast", {toastText:"Goal category is required."});
+        this.$.goalsDB.query.on("child_changed",function() {
+          var goalData = this.$.goalDB.data;
+          if(!goalData.category) {
+            this.fire("openToast", {toastText: "Goal category is required."});
             return false;
-          } else if(!goalData.startDate){
-            this.fire("openToast", {toastText:"Goal start date is required."});
+          } else if(!goalData.startDate) {
+            this.fire("openToast", {toastText: "Goal start date is required."});
             return false;
-          } else if(!goalData.finishDate){
-            this.fire("openToast", {toastText:"Goal finish date is required."});
+          } else if(!goalData.finishDate) {
+            this.fire("openToast", {toastText: "Goal finish date is required."});
             return false;
-          } else if(!goalData.coordinator){
-            this.fire("openToast", {toastText:"Goal cooridnator is required."});
+          } else if(!goalData.coordinator) {
+            this.fire("openToast", {toastText: "Goal cooridnator is required."});
             return false;
-          } else if(!goalData.description){
-            this.fire("openToast", {toastText:"Goal description is required."});
+          } else if(!goalData.description) {
+            this.fire("openToast", {toastText: "Goal description is required."});
             return false;
-          } else if(!goalData.steps){
-            this.fire("openToast", {toastText:"Add steps to the goal."});
+          } else if(!goalData.steps) {
+            this.fire("openToast", {toastText: "Add steps to the goal."});
           } else {
             return true;
           };
         }.bind(this));
-      },
+      }
+
     });
 
   </script>
