--- a/src/pages/care-plan/su-risk-multi-view.html
+++ b/src/pages/care-plan/su-risk-multi-view.html
@@ -31,39 +31,45 @@
 
     <style include="common-styles">
 
-      :host{
+      :host {
         --app-grid-columns:3;
         --app-grid-gutter:20px;
       }
-      guuey-slider{
+
+      guuey-slider {
         width:100%;
         height:60px;
         margin:0;
         padding:0;
       }
-      .multiCardMain{
+
+      .multiCardMain {
         margin:0;
         padding:0;
         height:90px;
       }
-      .cardDivider{
+
+      .cardDivider {
         border-bottom:1px solid #e0e0e0;
         height:1px;
         width:100%;
         display:inline-block;
       }
-      .dateContainer{
+
+      .dateContainer {
         flex-grow:1;
         display:flex;
         flex-direction:column;
       }
-      .dateHeader{
+
+      .dateHeader {
         width:100%;
         text-align:left;
         font-weight:bold;
         margin:0;
       }
-      .riskDate{
+
+      .riskDate {
         flex-grow:1;
         text-align:left;
         margin-left:10px;
@@ -140,36 +146,47 @@
     Polymer({
 
       is:"su-risk-multi-view",
-      ready:function(){
+
+      ready: function() {
         this.addEventListener("truncate-read-more", this._readMore);
       },
-      properties:{
-        risksData:{
-          type:Object,
-          notify:true
+
+      properties: {
+
+        dimensions: {
+          type: Object
         },
-        riskId:{
-          type:String,
-          value:null
+
+        risksData: {
+          type: Object,
+          notify: true
         },
-        viewType:{
-          type:String,
-          value:"multi-view"
+
+        riskId: {
+          type: String,
+          value: null
+        },
+
+        viewType: {
+          type: String,
+          value: "multi-view"
         }
       },
-      behaviors:[
+
+      behaviors: [
         Polymer.multiViewResizeBehavior,
         Polymer.multiViewGridBehavior
         //Polymer.multiEditAnimationBehavior
       ],
-      _computeQueryCount:function(risk){
-        if(!this.queryCount){
-          this.queryCount=0;
+
+      _computeQueryCount: function(risk) {
+        if(!this.queryCount) {
+          this.queryCount = 0;
         };
         this.queryCount++;
       },
-      _computeRiskImage:function(cat){
 
+      _computeRiskImage: function(cat) {
         switch(cat) {
           case "Moving & Handling":
               return "images/risks/movingHandling.png";
@@ -197,53 +214,60 @@
               break;
         };
       },
-      _computeDate:function(date){
-        if(typeof date==="string"){
+
+      _computeDate: function(date) {
+        if(typeof date === "string") {
           return date.slice(3,15);
         } else {
           return "Date not set";
         };
       },
-      toggleEditModal:function(e){
+
+      toggleEditModal: function(e) {
         this.$.editModal.positionTarget = e.target;
-        this.riskId=e.model.risk.$key;
+        this.riskId = e.model.risk.$key;
         this.$.editModal.toggle();
       },
-      directEditModal:function(e){
-        this.riskId=e.model.risk.$key;
-        this.fire("editRisk", {riskId:this.riskId});
+
+      directEditModal: function(e) {
+        this.riskId = e.model.risk.$key;
+        this.fire("editRisk", {riskId: this.riskId});
       },
-      editRisk:function(e){
-        this.fire("editRisk", {riskId:this.riskId});
+      editRisk:function(e) {
+        this.fire("editRisk", {riskId: this.riskId});
         this.$.editModal.close();
       },
-      deleteRisk:function(e){
-        this.fire("deleteRisk", {riskId:this.riskId});
+
+      deleteRisk: function(e) {
+        this.fire("deleteRisk", {riskId: this.riskId});
         this.$.editModal.close();
       },
-      computeDisplayCat:function(risk){
-        if(risk.indexOf("&")!= -1){
+
+      computeDisplayCat: function(risk) {
+        if(risk.indexOf("&") != -1){
           var arr = risk.split(" & ");
-          arr[0]+=" &";
+          arr[0] += " &";
           return arr;
-        } else if(risk.indexOf("And")!= -1){
+        } else if(risk.indexOf("And") != -1){
           var arr = risk.split(" And ");
-          arr[0]+=" &";
+          arr[0] += " &";
           return arr;
-        } else if(risk.indexOf("and")!= -1){
+        } else if(risk.indexOf("and") != -1){
           var arr = risk.split(" and ");
-          arr[0]+=" &";
+          arr[0] += " &";
           return arr;
         } else {
-          var arr=[];
+          var arr = [];
           arr.push(risk);
           return arr;
         };
       },
-      _readMore:function(e){
+
+      _readMore: function(e) {
         this.riskId = this.$.domRepeat.modelForElement(e.path[5]).risk.$key;
         this.fire("editRisk", {riskId:this.riskId});
       }
+
     });
 
   </script>
