--- a/test/index.html
+++ b/test/index.html
@@ -76,11 +76,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         //'ad-settings.html?dom=shadow',
         'ad-reports.html?dom=shady',
         'ad-reports.html?dom=shadow',
+        'ad-payment.html?dom=shady',
+        'ad-payment.html?dom=shadow',
+        'ad-users.html?dom=shady',
+        'ad-users.html?dom=shadow',
         /*
 
         //incomplete tests
 
-        //main functions are handled on main pages for each of these pages... other testing on these pages might be worthwhile though...
+        //main functions are handled on main pages (which are done) for each of these pages... other testing on these pages might be worthwhile though...
         'su-goals-edit-view.html?dom=shady',
         'su-goals-edit-view.html?dom=shadow',
         'su-goals-multi-view.html?dom=shady',
@@ -98,21 +102,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         //testing difficult due to needing to work with new users each time... perhaps do later....
         'def-verify.html?dom=shady',
         'def-verify.html?dom=shadow',
-
-        //admin page tests
-
-        'ad-payment.html?dom=shady',
-        'ad-payment.html?dom=shadow',
-        'ad-users.html?dom=shady',
-        'ad-users.html?dom=shadow',
-        'annual-manager-report.html?dom=shady',
-        'annual-manager-report.html?dom=shadow',
-        'manager-report-input-section.html?dom=shady',
-        'manager-report-input-section.html?dom=shadow',
-        'monthly-manager-report.html?dom=shady',
-        'monthly-manager-report.html?dom=shadow',
-        'quarterly-manager-report.html?dom=shady',
-        'quarterly-manager-report.html?dom=shadow',
 
         */
       ]);
